Fix product generation